--- a/meta-kaggle/01-linear-regression/01_linear_regression_from_scratch.ipynb
+++ b/meta-kaggle/01-linear-regression/01_linear_regression_from_scratch.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMjjjgHgL7EtLBlMGRwJPVs",
+      "authorship_tag": "ABX9TyO9/kQh16gnfoAuKLIJ7zY0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +83,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WD0mP_g3jkvE",
-        "outputId": "83333ac7-61d8-4f00-8387-6f2cd9bfa721"
+        "outputId": "e8cf0dc6-2984-4709-ef77-9bb797fe317b"
       },
       "execution_count": 3,
       "outputs": [
@@ -129,7 +129,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hf5vpIiSjyxI",
-        "outputId": "83d62aff-79f1-49a3-ffc7-91b5e592b534"
+        "outputId": "817c9a54-e4e6-41d0-fb3e-8d24905a042c"
       },
       "execution_count": 5,
       "outputs": [
@@ -254,7 +254,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y-33GYHallCT",
-        "outputId": "17d290f6-2d1e-4741-973b-b09508833fff"
+        "outputId": "4a585ade-0804-4475-d8a3-49fa2cd1dfd7"
       },
       "execution_count": 8,
       "outputs": [
@@ -306,7 +306,7 @@
       ],
       "metadata": {
         "id": "VmWkh10UmDRu",
-        "outputId": "4cdc76cb-99df-4129-ea35-ec37e6bb75c6",
+        "outputId": "80629f19-0710-42cf-e778-b7a47cbbfad8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -317,9 +317,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[-1.3306,  0.9132,  1.4294],\n",
-            "        [-0.8502,  1.2604,  0.3483]], requires_grad=True)\n",
-            "tensor([ 1.1598, -1.0976], requires_grad=True)\n"
+            "tensor([[-0.8192,  0.5226,  0.1578],\n",
+            "        [ 0.9957,  0.9839,  0.3789]], requires_grad=True)\n",
+            "tensor([1.1408, 1.9003], requires_grad=True)\n"
           ]
         }
       ]
@@ -394,7 +394,7 @@
       ],
       "metadata": {
         "id": "lpk5I21a2UVT",
-        "outputId": "98aad347-a528-42df-f338-3c7705393d38",
+        "outputId": "567d1466-95ef-4d92-9655-dd9df5406270",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -405,11 +405,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[ 26.6747,  36.2606],\n",
-            "        [ 51.9182,  54.7395],\n",
-            "        [ 90.6727, 114.0314],\n",
-            "        [-42.4062, -20.7368],\n",
-            "        [ 97.0734,  85.6181]], grad_fn=<AddBackward0>)\n"
+            "tensor([[-16.8655, 156.7958],\n",
+            "        [-17.3243, 203.3357],\n",
+            "        [  9.0457, 242.3373],\n",
+            "        [-54.1123, 159.7845],\n",
+            "        [  5.8262, 191.5750]], grad_fn=<AddBackward0>)\n"
           ]
         }
       ]
@@ -422,7 +422,7 @@
       ],
       "metadata": {
         "id": "5CSwni362dDb",
-        "outputId": "392884fd-a334-4c9b-88a7-bc15b5b055d6",
+        "outputId": "cf9d3283-16fa-4995-8dad-15bab352c23b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -497,7 +497,7 @@
       ],
       "metadata": {
         "id": "sN16xe8w5KZ2",
-        "outputId": "f9d27100-2f31-49c8-9963-68e3c0b55bfc",
+        "outputId": "9b3c789a-9d8b-42b9-c240-22289c74b392",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -508,7 +508,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor(1477.7517, grad_fn=<DivBackward0>)\n"
+            "tensor(9260.6738, grad_fn=<DivBackward0>)\n"
           ]
         }
       ]
@@ -570,7 +570,7 @@
       ],
       "metadata": {
         "id": "-qS20vxN5xqj",
-        "outputId": "0e15ac5b-d1e8-4a8d-f696-dc4502bed350",
+        "outputId": "4d01a50c-0c9b-4015-85af-ce7e324ba61b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -581,10 +581,10 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[-1.3306,  0.9132,  1.4294],\n",
-            "        [-0.8502,  1.2604,  0.3483]], requires_grad=True)\n",
-            "tensor([[-2846.0066, -2331.6536, -1512.6191],\n",
-            "        [-3303.0898, -2912.1199, -1996.9275]])\n"
+            "tensor([[-0.8192,  0.5226,  0.1578],\n",
+            "        [ 0.9957,  0.9839,  0.3789]], requires_grad=True)\n",
+            "tensor([[-7660.2314, -8173.9819, -5084.3276],\n",
+            "        [ 8538.5371,  8343.7988,  5249.3091]])\n"
           ]
         }
       ]
@@ -598,7 +598,7 @@
       ],
       "metadata": {
         "id": "Kj3kuyT-535w",
-        "outputId": "7e8e9d8d-8488-4ff0-e8f1-6477ee1b642d",
+        "outputId": "d171dd42-ceb9-4394-e3b6-4a4ddcb195e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -609,8 +609,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([ 1.1598, -1.0976], requires_grad=True)\n",
-            "tensor([-31.4134, -38.0174])\n"
+            "tensor([1.1408, 1.9003], requires_grad=True)\n",
+            "tensor([-90.8860,  98.7657])\n"
           ]
         }
       ]
@@ -652,7 +652,7 @@
       ],
       "metadata": {
         "id": "VbyjaidE6Ygt",
-        "outputId": "2f52f677-f4f9-4b36-edcb-60903a5d1ec7",
+        "outputId": "99eaee3c-ab5c-4526-8c88-d20ce4374f0f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -696,9 +696,294 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Generate predictions\n",
+        "preds = model(inputs)\n",
+        "print(preds)"
+      ],
+      "metadata": {
+        "id": "bPo8xLeH7Pbc",
+        "outputId": "7ed9fadc-b914-46bc-e68a-c578f91fc0ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[-16.8655, 156.7958],\n",
+            "        [-17.3243, 203.3357],\n",
+            "        [  9.0457, 242.3373],\n",
+            "        [-54.1123, 159.7845],\n",
+            "        [  5.8262, 191.5750]], grad_fn=<AddBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate the loss\n",
+        "loss = mse(preds, targets)\n",
+        "print(loss)"
+      ],
+      "metadata": {
+        "id": "mG90PslzSsxu",
+        "outputId": "57e639dc-47bb-43f9-d499-54472531ab08",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor(9260.6738, grad_fn=<DivBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Compute gradients\n",
+        "loss.backward()"
+      ],
+      "metadata": {
+        "id": "NQQj_Qu5SzrU"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Adjust weights & reset gradients\n",
+        "with torch.no_grad():\n",
+        "  w -= w.grad * 1e-5\n",
+        "  b -= b.grad * 1e-5\n",
+        "  w.grad.zero_()\n",
+        "  b.grad.zero_()"
+      ],
+      "metadata": {
+        "id": "9zbuiZeaS3tU"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(w)"
+      ],
+      "metadata": {
+        "id": "YUGx0CsSTKjv",
+        "outputId": "50d08e21-1eab-43be-bd07-2d8ec6dc3379",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[-0.7426,  0.6043,  0.2086],\n",
+            "        [ 0.9103,  0.9004,  0.3264]], requires_grad=True)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "With the new weights and biases, the model should have a lower loss."
+      ],
+      "metadata": {
+        "id": "NPYCMiq1TP0x"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate loss\n",
+        "preds = model(inputs)\n",
+        "loss = mse(preds, targets)\n",
+        "print(loss)"
+      ],
+      "metadata": {
+        "id": "5RFDh6LPTLdL",
+        "outputId": "ecab9794-55ce-4a3b-dac1-6240cd6c056f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor(6333.8018, grad_fn=<DivBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Train for multiple epochs"
+      ],
+      "metadata": {
+        "id": "GRvlzYWUTiRW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To reduce the loss further, we repeat the process of adjusting the weights and biases using the gradients multiple times. Each iteration is called an epoch."
+      ],
+      "metadata": {
+        "id": "44T111T7Ti4L"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Train for 100 epochs\n",
+        "for i in range(100):\n",
+        "  preds = model(inputs)\n",
+        "  loss = mse(preds, targets)\n",
+        "  loss.backward()\n",
+        "  with torch.no_grad():\n",
+        "    w -= w.grad * 1e-5\n",
+        "    b -= b.grad * 1e-5\n",
+        "    w.grad.zero_()\n",
+        "    b.grad.zero_()"
+      ],
+      "metadata": {
+        "id": "Hnd6THd9TZl2"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate loss\n",
+        "preds = model(inputs)\n",
+        "loss = mse(preds, targets)\n",
+        "print(loss)"
+      ],
+      "metadata": {
+        "id": "cwBXA3g9UQL_",
+        "outputId": "95924553-57e7-4eda-d06f-178e3e1385dd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor(101.7731, grad_fn=<DivBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Print predictions\n",
+        "preds"
+      ],
+      "metadata": {
+        "id": "R5lqO5enUVOI",
+        "outputId": "89a5394d-1b63-4478-d666-14dce09cdc5b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 57.3239,  74.9878],\n",
+              "        [ 80.2405,  98.2503],\n",
+              "        [122.9137, 130.9461],\n",
+              "        [ 20.6816,  61.8064],\n",
+              "        [ 98.9587, 100.8342]], grad_fn=<AddBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Print targets\n",
+        "targets"
+      ],
+      "metadata": {
+        "id": "zmLJb_DyUZ4M",
+        "outputId": "72ff87b5-d8b4-416e-84a6-8d41438ad5de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 56.,  70.],\n",
+              "        [ 81., 101.],\n",
+              "        [119., 133.],\n",
+              "        [ 22.,  37.],\n",
+              "        [103., 119.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##PyTorch Linear Regression"
+      ],
+      "metadata": {
+        "id": "FBd5_YwWUolB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's re-implement the same model using some built-in functions and classes from PyTorch."
+      ],
+      "metadata": {
+        "id": "7CXaCMR_UtA1"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "bPo8xLeH7Pbc"
+        "id": "gSNpRoJ4UeAx"
       },
       "execution_count": null,
       "outputs": []
